--- a/imagery/i.atcorr/description.html
+++ b/imagery/i.atcorr/description.html
@@ -3,7 +3,7 @@
 <b>i.atcorr</b> performs atmospheric correction on the input raster using the
 6S algorithm (Second Simulation of Satellite Signal in the Solar Spectrum). A
 detailed algorithm description is available at the 
-<a href=http://modis-sr.ltdri.org/index.html>Land Surface Reflectance Science
+<a href="http://modis-sr.ltdri.org/index.html">Land Surface Reflectance Science
 Computing Facility website</a> and Mauro A. Homem Antunes <a
 href="http://www.ltid.inpe.br/dsr/mauro/6s/download_6s.html">website about his
 6s version</a>.
@@ -41,7 +41,6 @@ An example 6s parameters <em>icnd</em> file for <b>i.atcorr</b>:
 64                           - 4th band of ETM+ Landsat 7
 </pre></div>
 
-
 <h2><font color="red">REMAINING DOCUMENTATION ISSUES</font></h2>
 1. Using the target elevation and visibility parameters in the <em>icnd</em>
 file overrides <em>ialt</em> and <em>ivis</em> input rasters. It is not clear
@@ -49,10 +48,10 @@ what to do to force <b>i.atcorr</b> to use the rasters instead though.
 <p>
 2. The "example 6s parameters file" explains that "-.600" in line 6 means
 "target at 600 m ASL". However, in the section E of "6S CODE PARAMETER CHOICES"
-it reads: "xps <=0. means the target is at the sea level". This is contrary.
+it reads: "xps &lt;=0. means the target is at the sea level". This is contrary.
 <p>
-3. In section E, I'm not sure if the "-100< xpp <0" shouldn't actually be
-"-1000< xpp <0". ?
+3. In section E, I'm not sure if the "-100 &lt; xpp &lt; 0" shouldn't actually be
+"-1000 &lt; xpp &lt; 0". ?
 <p>
 4. It is not explained what is the "iaer" parameter that section D refers to.
 <p>
@@ -65,14 +64,13 @@ in conjuction with flag <em>-o</em> can slow down the calculations instead of
 speeding them up.
 <p>
 7. "This should not affect the user's current region settings" sounds ambigious.
-
 <p>
 
 <H2>6S CODE PARAMETER CHOICES</H2>
 
 <h3>A. Geometrical conditions:</h3>
 
-<table BORDERWIDTH="AUTO" CELLPADDING="3">
+<table CELLPADDING="3">
 
 <tr>
 <td>Code</td>
@@ -130,39 +128,39 @@ the ascendant node at equator</td>
 
 <tr>
 <td>6</td>
-
 <td><b>hrv</b> (spot)</td>
-
 <td>enter month,day,hh.ddd,long.,lat. *</td>
 </tr>
 
 <tr>
 <td>7</td>
-
 <td><b>tm</b> (landsat)</td>
-
 <td>enter month,day,hh.ddd,long.,lat. *</td>
 </tr>
 
 <tr>
 <td>8</td>
-
 <td><b>etm+</b> (landsat7)</td>
+<td>enter month,day,hh.ddd,long.,lat. *</td>
+</tr>
 
+<tr>
+<td>9</td>
+<td><b>liss</b> (IRS 1C)</td>
 <td>enter month,day,hh.ddd,long.,lat. *</td>
 </tr>
 </table>
 
 <blockquote>
-* NOTE: for hrv, tm and etm+ experiments, longitude and lattitude
-are the coordinates of the scene center. Lattitude must be >0 for northern
-hemisphere and &lt;0 for southern. Longitude must be >0 for eastern hemisphere
+* NOTE: for hrv, tm, etm+ and liss experiments, longitude and latitude
+are the coordinates of the scene center. Latitude must be &gt;0 for northern
+hemisphere and &lt;0 for southern. Longitude must be &gt;0 for eastern hemisphere
 and &lt;0 for western.
 </blockquote>
 
 <br><h3>B. Atmospheric model</h3>
 
-<table BORDERWIDTH="AUTO" CELLPADDING="3">
+<table CELLPADDING="3">
 
 <tr>
 <td>Code</td>
@@ -234,7 +232,7 @@ ozone content:
 
 <br><h3>C. Aerosols model</h3>
 
-<table BORDERWIDTH="AUTO" CELLPADDING="3">
+<table CELLPADDING="3">
 
 <tr>
 <td>Code</td>
@@ -347,7 +345,7 @@ visibility and enter the aerosol optical depth at 550nm.
 <br><h3>E. Target altitude (xps), sensor platform (xpp)</h3>
 
 <blockquote>xps &lt;=0 means the target is at the sea level.
-<br>xps >0 means you know the altitude of the target expressed
+<br>xps &gt;0 means you know the altitude of the target expressed
 in km, and you put that value as xps.
 <br>
 
@@ -377,7 +375,7 @@ pre-defined satellites.
 
 <p>Define your own spectral conditions:
 <p>
-<table BORDERWIDTH="AUTO" CELLPADDING="3">
+<table CELLPADDING="3">
 
 <tr>
 <td>Code</td>
@@ -411,7 +409,7 @@ micrometer.</td>
 
 <p>Pre-defined satellite bands:
 <p>
-<table BORDERWIDTH="AUTO" CELLPADDING="3">
+<table CELLPADDING="3">
 
 <tr><td>Code</td><td>Meaning</td></tr>
 
@@ -499,6 +497,10 @@ micrometer.</td>
 <tr><td>66</td><td>etm+ (landsat7) band 7 (2.020-2.380)</td></tr>
 <tr><td>67</td><td>etm+ (landsat7) band 8 (0.504-0.909)</td></tr>
 
+<tr><td>68</td><td><b>liss (IRC 1C)</b> band 2 (0.502-0.620)</td></tr>
+<tr><td>69</td><td>liss (IRC 1C) band 3 (0.612-0.700)</td></tr>
+<tr><td>70</td><td>liss (IRC 1C) band 4 (0.752-0.880)</td></tr>
+<tr><td>71</td><td>liss (IRC 1C) band 5 (1.452-1.760)</td></tr>
 </table>
 
 <H2>AUTHORS</H2>
