--- a/raster/r.watershed/front/description.html
+++ b/raster/r.watershed/front/description.html
@@ -1,7 +1,7 @@
 <h2>DESCRIPTION</h2>
 
 <em>r.watershed</em> generates a set of maps indicating:
-1) the location of watershed basins, and
+1) flow accumulation, drainage direction, the location of streams and watershed basins, and
 2) the LS and S factors of the Revised Universal Soil Loss Equation (RUSLE).
 
 <p>
@@ -24,9 +24,14 @@ lumped-parameter hydrologic model program.  The non-interactive version of
 
 <dd>Without this flag set, the entire analysis is run in memory
 maintained by the operating system.  This can be limiting, but is
-relatively fast.  Setting the flag causes the program to manage memory
+very fast.  Setting the flag causes the program to manage memory
 on disk which allows larger maps to be processed but is considerably
 slower.
+
+<dt><em>-f</em> 
+
+<dd>Use multiple flow direction (MFD) instead of single flow direction (SFD, D8).
+SFD is enabled by default.
 
 <dt><em>-4</em> 
 
@@ -35,15 +40,31 @@ Stream and slope lengths are approximately the same as outputs from default
 surface flow (allows horizontal, vertical, and diagonal flow of water).
 This flag will also make the drainage basins look more homogeneous.
 
+<dt><em>memory</em> 
+
+<dd>Maximum amount of memory in MB to be used with -m set. More memory 
+speeds up the processes.
+
+<dt><em>convergence</em> 
+
+<dd>Convergence factor for MFD. Lower values result in higher divergence,
+flow is more widely distributed. Higher values result in higher convergence, 
+flow is less widely distributed, becoming more similar to SFD. 
+
 <dt><em>elevation</em> 
 
-<dd>Input map: Elevation on which entire analysis is based.
+<dd>Input map: Elevation on which entire analysis is based. NULL (nodata) 
+cells are ignored, zero and negative values are valid elevation data. 
+Gaps in the elevation map that are located within the area of interest 
+must be filled beforehand, e.g. with <em>r.fillnulls</em>, to avoid 
+distortions.
 
 <dt><em>depression</em> 
 
 <dd>Input map:  Map layer of actual depressions or sinkholes in the
 landscape that are large enough to slow and store surface runoff from 
-a storm event.  Any non-zero values indicate depressions.
+a storm event.  All cells that are not NULL and not zero indicate 
+depressions. Water will flow into but not out of depressions.
 
 <dt><em>flow</em> 
 
@@ -51,7 +72,7 @@ a storm event.  Any non-zero values indicate depressions.
 amount of overland flow units that each cell will contribute to the
 watershed basin model.  Overland flow units represent the amount of
 overland flow each cell contributes to surface flow.  If omitted, a
-value of one (1) is assumed. The algorithm is D8 flow accumulation.
+value of one (1) is assumed.
 
 <dt><em>disturbed.land</em> 
 
@@ -64,14 +85,15 @@ assumes no disturbed land.  This input is used for the RUSLE calculations.
 
 <dd>Input map: terrain that will block overland surface flow.  Terrain
 that will block overland surface flow and restart the slope length
-for the RUSLE.  Any non-zero values indicate blocking terrain.
+for the RUSLE.  All cells that are not NULL and not zero indicate blocking 
+terrain.
 
 <dt><em>threshold</em> 
 
 <dd>The minimum size of an exterior watershed basin in cells, if no flow
 map is input, or overland flow units when a flow map is given.
 Warning: low threshold values will dramactically increase run time and
-generate difficult too read basin and half.basin results.
+generate difficult to read basin and half_basin results.
 This parameter also controls the level of detail in the <em>stream</em>
 segments map.
 
@@ -98,10 +120,10 @@ calculated accurately.
 <dt><em>drainage</em> 
 
 <dd>Output map: drainage direction.  Provides the "aspect" for each
-cell.  Multiplying positive values by 45 will give the direction in
-degrees that the surface runoff will travel from that cell.  The
-value -1 indicates that the cell is a depression area (defined by
-the depression input map).  Other negative values indicate that
+cell measured CCW from East.  Multiplying positive values by 45 will give 
+the direction in degrees that the surface runoff will travel from that 
+cell.  The value 0 (zero) indicates that the cell is a depression area 
+(defined by the depression input map).  Negative values indicate that
 surface runoff is leaving the boundaries of the current geographic
 region.  The absolute value of these negative cells indicates the
 direction of flow.
@@ -117,7 +139,8 @@ in the current geographic region.
 <dt><em>stream</em> 
 
 <dd>Output map: stream segments.  Values correspond to the watershed
-basin values.
+basin values.  Can be vectorized after thinning (<em>r.thin</em>) with 
+<em>r.to.vect</em>.
 
 <dt><em>half.basin</em> 
 
@@ -138,30 +161,28 @@ are given the value of the <em>threshold</em> parameter.
 
 <dt><em>length.slope</em> 
 
-<dd>Output map: slope length and steepness (LS) factor.  Contains the LS
-factor for the Revised Universal Soil Loss Equation.  Equations taken
-from <em>Revised Universal Soil Loss Equation for Western Rangelands</em>
-(Weltz et al. 1987).
-Since the LS factor is a small number, it is multiplied by 100 for the
-GRASS output map.
+<dd>Output map: slope length and steepness (LS) factor for the Revised 
+Universal Soil Loss Equation (RUSLE).  Equations taken from <em>Revised 
+Universal Soil Loss Equation for Western Rangelands</em>
+(Weltz et al. 1987). Since the LS factor is a small number (usually less 
+than one), it is multiplied by 100.
 
 <dt><em>slope.steepness</em> 
 
-<dd>Output map: slope steepness (S) factor for RUSLE.
-Contains the revised S factor for the Universal Soil
-Loss Equation.  Equations taken from article entitled
+<dd>Output map: slope steepness (S) factor for the Universal Soil
+Loss Equation (RUSLE).  Equations taken from article entitled
 <em>Revised Slope Steepness Factor for the Universal Soil
-Loss Equation</em> (McCool et al. 1987).  Since the S factor
-is a small number (usually less than one), it is multiplied
-by 100 for the GRASS output map layer.
+Loss Equation</em> (McCool et al. 1987).  Since the S factor is a small 
+number (usually less than one), it is multiplied by 100.
 </dd>
 </dl>
 
 
 <h2>NOTES</h2>
 
-<em>r.watershed</em> uses an A<sup>T</sup> least-cost search algorithm
-(see <a href="#references">REFERENCES</a> section) designed to minimize
+<h4>A<sup>T</sup> least-cost search algorithm</h4>
+<em>r.watershed</em> uses an A<sup>T</sup> least-cost search algorithm 
+(see <a href="#references">REFERENCES</a> section) designed to minimize 
 the impact of DEM data errors. Compared to <em>r.terraflow</em>, this 
 algorithm provides more accurate results in areas of low slope as well 
 as DEMs constructed with techniques that mistake canopy tops as the 
@@ -180,52 +201,81 @@ watershed software which fails under these conditions.) Also, if watershed
 divides contain forest canopy mixed with uncanopied areas using SRTM, IFSAR,
 and similar data products, <em>r.watershed</em> will generate better basin
 results than <em>r.terraflow</em>.
-
-<p>
-There are two versions of this program: <em>ram</em> and <em>seg</em>.
-Which is version is run depends on whether the <em>-m</em> flag is set.
-<br>
-The <em>ram</em> version uses virtual memory managed by the operating
-system to store all the data structures and is faster than the <em>seg</em>
-version;
-<em>seg</em> uses the GRASS segmentation library which manages data in disk
-files. Thus <em>seg</em> uses much less system memory (RAM) allowing other
-processes to operate on the same CPU, even when the current geographic
-region is huge.
-<br>
-Due to memory requirements of both programs, it is quite easy to run out of
-memory when working with huge map regions. If the <em>ram</em> version runs
-out of memory and the resolution size of the current geographic region
-cannot be increased, either more memory  needs to be added to the computer,
-or the swap space size needs to be increased.  If <em>seg</em> runs out of
-memory, additional disk space needs to be freed up for the program to run.
-
-<p>
-Both versions use the A<sup>T</sup> least-cost search algorithm to determine
-the flow of water over the landscape (see <a href="#seealso">SEE ALSO</a>
-section).
 The algorithm produces results similar to those obtained when running
 <em><a href="r.cost.html">r.cost</a></em> and
 <em><a href="r.drain.html">r.drain</a></em> on every cell on the map.
 
-<p>
-In many situations, the elevation data will be too finely detailed for
-the amount of time or memory available.  Running <em>r.watershed</em> may
-require use of a coarser resolution.  To make the results more closely
+<h4>Multiple flow direction (MFD)</h4>
+
+<em>r.watershed</em> offers two methods to calculate surface flow: 
+single flow direction (SFD, D8) and multiple flow direction (MFD). With 
+MFD, water flow is distributed to all neighbouring cells with lower 
+elevation, using slope towards neighbouring cells as a weighing factor 
+for proportional distribution. The A<sup>T</sup> least-cost path is 
+always included. As a result, depressions and obstacles are overflown 
+with a gracefull flow convergence before the overflow. The convergence 
+factor causes flow accumulation to converge more strongly with higher 
+values. The supported range is 1 to 10, recommended is a convergence 
+factor of 5 (Holmgren, 1994). If many small sliver basins are created 
+with MFD, setting the convergence factor to a higher value can reduce 
+the amount of small sliver basins.
+<br>See example below with the North Carolina dataset for using MFD mode.
+
+<h4>In-memory mode and disk swap mode</h4>
+There are two versions of this program: <em>ram</em> and <em>seg</em>.
+<em>ram</em> is used by default, <em>seg</em> can be used by setting 
+the <em>-m</em> flag.
+<br>
+The <em>ram</em> version requires a maximum of 31 MB of RAM for 1 million 
+cells. Together with the amount of system memory (RAM) available, this 
+value can be used to estimate whether the current region can be 
+processed with the <em>ram</em> version.
+<br>
+The <em>ram</em> version uses virtual memory managed by the operating
+system to store all the data structures and is faster than the <em>seg</em>
+version; <em>seg</em> uses the GRASS segmentation library which manages 
+data in disk files. <em>seg</em> uses only as much system memory (RAM) as 
+specified with the <em>memory</em> option, allowing other processes to 
+operate on the same system, even when the current geographic region is huge.
+<br>
+Due to memory requirements of both programs, it is quite easy to run out of
+memory when working with huge map regions. If the <em>ram</em> version runs
+out of memory and the resolution size of the current geographic region
+cannot be increased, either more memory needs to be added to the computer,
+or the swap space size needs to be increased. If <em>seg</em> runs out of
+memory, additional disk space needs to be freed up for the program to run.
+The <em>r.terraflow</em> module was specifically designed with huge
+regions in mind and may be useful here as an alternative.
+
+<h4>Large regions with many cells</h4>
+In some situations, the region size (number of cells) may be too large for
+the amount of time or memory available. Running <em>r.watershed</em> may
+then require use of a coarser resolution. To make the results more closely
 resemble the finer terrain data, create a map layer containing the
-lowest elevation values at the coarser resolution.  This is done by:
+lowest elevation values at the coarser resolution. This is done by:
 1) Setting the current geographic region equal to the elevation map
 layer with <em>g.region</em>, and 2) Use the <em>r.neighbors</em> or
 <em>r.resamp.stats</em> command to find the lowest value for an area
-equal in size to the desired resolution.  For example, if the resolution
+equal in size to the desired resolution. For example, if the resolution
 of the elevation data is 30 meters and the resolution of the geographic
-region for <em>r.watershed</em> will be 90 meters:  use the minimum 
-function for a 3 by 3 neighborhood.  After changing to the resolution at
+region for <em>r.watershed</em> will be 90 meters: use the minimum 
+function for a 3 by 3 neighborhood. After changing to the resolution at
 which <em>r.watershed</em> will be run, <em>r.watershed</em> should be run
 using the values from the <em>neighborhood</em> output map layer that
 represents the minimum elevation within the region of the coarser cell.
 
-<p>
+<h4>High-resolution elevation maps with floating point values</h4>
+To get better results with high resolution elevation maps with 
+floating point values, it may be necessary to multiply the original map 
+with e.g. 100 to change elevation units from meters to cm, because 
+<em>r.watershed</em> reads input elevation maps as integer. This allows 
+control over how much detail is required to obtain useful results with a 
+given dataset and region setting. Remember to adjust any <em>slope length 
+and steepness (LS) factor</em> or <em>slope steepness (S) factor</em> 
+output accordingly. See example below for using <em>r.mapcalc</em> to 
+convert elevation from meter to millimeter.
+
+<h4>Basin threshold</h4>
 The minimum size of drainage basins, defined by the <em>threshold</em>
 parameter, is only relevant for those watersheds with a single stream
 having at least the <em>threshold</em> of cells flowing into it.
@@ -235,19 +285,26 @@ Interior drainage basins can be of any size because the length of
 an interior stream segment is determined by the distance between the
 tributaries flowing into it.
 
+<h4>MASK and no data</h4>
 <p>
 The <em>r.watershed</em> program does not require the user to have the
 current geographic region filled with elevation values.  Areas without
-elevation data MUST be masked out, by creating a raster map (or raster
-reclassification) named <tt>MASK</tt>.  Areas
-masked out will be treated as if they are off the edge of the region.
-MASKs will reduce the memory necessary to run the program.  Masking out 
-unimportant areas can significantly reduce processing time if the watersheds 
-of interest occupy a small percentage of the overall area.
-
+elevation data (masked or NULL cells) are ignored. It is NOT necessary to
+create a raster map (or raster reclassification) named <tt>MASK</tt> for 
+NULL cells.  Areas without elevation data will be treated as if they are 
+off the edge of the region. Such areas will reduce the memory necessary 
+to run the program.  Masking out unimportant areas can significantly 
+reduce processing time if the watersheds of interest occupy a small 
+percentage of the overall area.
 <p>
-Zero data values will be treated as elevation data (not no_data).
+Gaps (NULL cells) in the elevation map that are located within the area 
+of interest will heavily influence the analysis: water will 
+flow into but not out of these gaps. These gaps must be filled beforehand, 
+e.g. with <em>r.fillnulls</em>.
+<p>
+Zero (0) and negative values will be treated as elevation data (not no_data).
 
+<h4>Further processing of output layers</h4>
 <p>
 To isolate an individual river network using the output of this module,
 a number of approaches may be considered.
@@ -265,7 +322,15 @@ a number of approaches may be considered.
 <p>
 To create <i>river mile</i> segmentation from a vectorized streams map,
 try the <em>v.net.iso</em> or <em>v.lrs.segment</em> modules.
-
+<p>
+The stream segments output can be easily vectorized after thinning with 
+<em>r.thin</em>. Each stream segment in the vector map will have the 
+value of the associated basin. To isolate subbasins and streams for a 
+larger basin, a MASK for the larger basin can be created with 
+<em>r.water.outlet</em>. The stream segments output serves as a guide 
+where to place the outlet point used as input to <em>r.water.outlet</em>. 
+The basin threshold must have been sufficiently small to isolate a 
+stream network and subbasins within the larger basin.
 
 <h2>EXAMPLES</h2>
 <i>These examples use the Spearfish sample dataset.</i>
@@ -359,6 +424,18 @@ Display output in a nice way
 </pre></div>
 <br>
 
+<i>This example uses the North Carolina sample dataset.</i>
+<p>
+Using MFD mode on a LIDAR elevation dataset:
+<br>Convert elevation values of elev_lid972_1m from meter to millimeter 
+then compare MFD mode with default medium flow convergence to SFD mode.
+<div class="code"><pre>
+  r.mapcalc "elev_lid972_1m.1mm = round(elev_lid972_1m * 1000.0)"
+  r.watershed elevation=elev_lid972_1m.1mm accumulation=elev_lid972_1m.1mm.acc drainage=elev_lid972_1m.1mm.dir convergence=5
+  r.watershed -s elevation=elev_lid972_1m.1mm accumulation=elev_lid972_1m.1mm.acc.sfd drainage=elev_lid972_1m.1mm.dir.sfd
+</pre></div>
+
+
 <a name="references"></a>
 <h2>REFERENCES</h2>
 
@@ -369,6 +446,12 @@ to Develop Hydrologic Models from Digital Elevation Data</i>,
 Symposium '89</b>, pp 275-281 (Baltimore, MD, 18-19 March 1989).<br>
 URL: <a href="http://faculty.wiu.edu/CR-Ehlschlaeger2/older/IGIS/paper.html">
 http://faculty.wiu.edu/CR-Ehlschlaeger2/older/IGIS/paper.html</a>
+
+<p>
+Holmgren, P. (1994). <i>Multiple flow direction algorithms for runoff 
+modelling in grid based elevation models: An empirical evaluation.</i>
+<b>Hydrological Processes</b> Vol 8(4), p.327-334.<br>
+DOI: <a href="http://dx.doi.org/10.1002/hyp.3360080405">10.1002/hyp.3360080405</a>
 
 <p>
 Kinner D., H. Mitasova, R. Harmon, L. Toma, R., Stallard. (2005).
@@ -395,8 +478,10 @@ Food Production In Arid Zones</b> (Tucson, AZ, 12-16 Oct. 1987).
 <a href="g.region.html">g.region</a>,
 <a href="r.cost.html">r.cost</a>,
 <a href="r.drain.html">r.drain</a>,
+<a href="r.fillnulls.html">r.fillnulls</a>,
 <a href="r.flow.html">r.flow</a>,
 <!-- <a href="r.flowmd.html">r.flowmd</a>, -->
+<a href="r.mask.html">r.mask</a>,
 <a href="r.neighbors.html">r.neighbors</a>,
 <a href="r.param.scale.html">r.param.scale</a>,
 <a href="r.resamp.interp.html">r.resamp.interp</a>,
@@ -411,7 +496,8 @@ Food Production In Arid Zones</b> (Tucson, AZ, 12-16 Oct. 1987).
 Original version:
 Charles Ehlschlaeger, U.S. Army Construction Engineering Research Laboratory
 <br>
-Speedups: Markus Metz &lt;markus.metz.giswork at gmail.com&gt;
+Faster sorting algorithm:
+Markus Metz &lt;markus.metz.giswork at gmail.com&gt;
 
 <p>
 <i>Last changed: $Date$</i>
