--- a/imagery/i.pca/description.html
+++ b/imagery/i.pca/description.html
@@ -45,6 +45,21 @@ Eigenvalue and eigenvector information is stored in the output maps'
 history files. View with <em>r.info</em>.
 
 
+<H2>EXAMPLE</H2>
+
+Using the Spearfish Imagery sample dataset
+
+<div class="code"><pre>
+i.pca in=spot.ms.1,spot.ms.2,spot.ms.3 out=spot_pca
+
+r.info -h spot_pca.1
+   Eigen values, (vectors), and [percent importance]:
+   PC1   1170.12 ( -0.63 -0.65 -0.43 ) [ 88.07% ]
+   PC2    152.49 (  0.23  0.37 -0.90 ) [ 11.48% ]
+   PC3      6.01 (  0.75 -0.66 -0.08 ) [  0.45% ]
+</pre></div>
+
+
 <H2>SEE ALSO</H2>
 
 Richards, John A.,
