--- a/ps/ps.map/description.html
+++ b/ps/ps.map/description.html
@@ -244,7 +244,7 @@ USAGE:	<B>colortable</B> [y|n]
 	<B>color</B> text color
 	<B>nodata</B> [Y|n]
 	<B>tickbar</B> [y|N]
-	<B>discrete</B> [y|N]
+	<B>discrete</B> [y|n]
 	<B>end</B>
 </PRE>
 
@@ -270,6 +270,7 @@ main command will be treated as a single line instruction.
 See also the <a href="#vlegend">vlegend</a> command for creating vector map
 legends.
 
+
 <h4>Categorical (CELL) Maps</h4>
 
 Adding the <B>nodata N</B> instruction will prevent the "no data" box 
@@ -279,15 +280,15 @@ added a "no data" label to the cats/ file it will be shown regardless.
 <B>Note</B>:  Be careful about asking for color tables for integer
 raster map layers which have many categories, such as elevation.
 This could result in the printing of an extremely long color table!
-In this situation it is useful to use <em>r.mapcalc</em> to convert the
-map to a floating point (FCELL) map to take advantage of the continuous
-color gradient legend.
+In this situation it is useful to use the <B>discrete N</B> instruction
+to force a continuous color gradient legend.
 <P>
 Be aware that the color table only includes categories which
 have a label. If there are only a few categories, you can use
 <em>r.support</em> to manually add labels. If there are too many categories to
 do this by hand, you can supply a label rules file to the <em>r.category</em>
 module.
+
 
 <h4>Floating point (FCELL and DCELL) Maps</h4>
 
