fix again example
git-svn-id: https://svn.osgeo.org/grass/grass/branches/develbranch_6@37134 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/imagery/i.atcorr/description.html
+++ b/imagery/i.atcorr/description.html
@@ -522,8 +522,8 @@ echo "8                            - geometrical conditions=Landsat ETM+
 -1000                        - sensor on board a satellite
 64                           - 4th band of ETM+ Landsat 7" > icnd.txt
 
-# run atmospheric correction
-i.atcorr lsat7_2002_40 ialt=elev_int icnd=icnd.txt oimg=lsat7_2002_40_atcorr
+# run atmospheric correction (-a for &gt; July 2000; -o to use cache acceleration):
+i.atcorr -a -o lsat7_2002_40 ialt=elev_int icnd=icnd.txt oimg=lsat7_2002_40_atcorr
 </pre></div>
 
 Note that the process is computationally intensive.
