nothing uses GRASS_TCLSH
git-svn-id: https://svn.osgeo.org/grass/grass/branches/develbranch_6@37219 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/variables.html
+++ b/lib/init/variables.html
@@ -270,7 +270,8 @@ text
   <br>
   <dt>GRASS_TCLSH</dt>
   <dd>[nviz]<br>
-    set tclsh shell name to override 'tclsh'.</dd>
+    set tclsh shell name to override 'tclsh'. <i>It is probable that this
+    is no longer used.</i></dd>
   
   <br>
   <dt>GRASS_XTERM</dt>
